# vedis-1

./: CMakeLists.txt  cli.c
